implement cli
